--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.7",
     "@tailwindcss/forms": "^0.5.7",
-    "antd": "^5.17.0",
+    "antd": "^5.17.4",
     "chart.js": "^4.4.1",
     "chartjs-adapter-moment": "^1.0.1",
     "moment": "^2.29.4",
@@ -19,12 +20,14 @@
     "react-highlight-words": "^0.20.0",
     "react-router-dom": "^6.20.1",
     "react-transition-group": "^4.4.5",
+    "sql-formatter": "^15.3.1",
     "sweetalert2": "^11.11.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
+    "rollup-plugin-visualizer": "^5.12.0",
     "tailwindcss": "^3.3.6",
     "vite": "^5.0.6"
   }
